--- a/dev/gui/first_draft.ui
+++ b/dev/gui/first_draft.ui
@@ -1460,9 +1460,9 @@ Vielleicht kommt hier mal noch eine Möglichkeit die Benennung anzupassen.</stri
                      <property name="geometry">
                       <rect>
                        <x>0</x>
-                       <y>-358</y>
+                       <y>-392</y>
                        <width>695</width>
-                       <height>979</height>
+                       <height>1013</height>
                       </rect>
                      </property>
                      <layout class="QVBoxLayout" name="verticalLayout_19">
@@ -1560,7 +1560,7 @@ p, li { white-space: pre-wrap; }
                             </size>
                            </property>
                            <property name="text">
-                            <string>Angegbene Spalten sind die Standard Spalten, lösche Spalten, die du nicht willst oder füge neue mit &quot;, Spaltenname&quot; hinzu.</string>
+                            <string>Beide Mappen enthalten automatisch die Spalten 'Datei', 'Abschnitt' und 'Bewertung'. Hier kannst du konfigurieren, welche Spalten noch dazu kommen.Füge neue mit &quot;, Spaltenname&quot; hinzu.</string>
                            </property>
                            <property name="wordWrap">
                             <bool>true</bool>
@@ -1587,15 +1587,27 @@ p, li { white-space: pre-wrap; }
                           </widget>
                          </item>
                          <item>
-                          <widget class="QLineEdit" name="vid_columns">
+                          <widget class="QPlainTextEdit" name="vid_columns">
+                           <property name="sizePolicy">
+                            <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
+                             <horstretch>0</horstretch>
+                             <verstretch>0</verstretch>
+                            </sizepolicy>
+                           </property>
                            <property name="minimumSize">
                             <size>
-                             <width>50</width>
-                             <height>30</height>
+                             <width>0</width>
+                             <height>0</height>
                             </size>
                            </property>
-                           <property name="text">
-                            <string>Datei, Tag, Abschnitt, Bewertung, Bemerkung</string>
+                           <property name="maximumSize">
+                            <size>
+                             <width>16777215</width>
+                             <height>60</height>
+                            </size>
+                           </property>
+                           <property name="plainText">
+                            <string> Bemerkung, Outtakes</string>
                            </property>
                           </widget>
                          </item>
@@ -1653,7 +1665,7 @@ p, li { white-space: pre-wrap; }
                             </size>
                            </property>
                            <property name="plainText">
-                            <string>Datei, Tag, Abschnitt, Bewertung, Bemerkung</string>
+                            <string>Bemerkung, NZS, Outtakes, Abspann</string>
                            </property>
                           </widget>
                          </item>
@@ -1840,6 +1852,13 @@ p, li { white-space: pre-wrap; }
                        </widget>
                       </item>
                       <item>
+                       <widget class="QPushButton" name="create_excel_pb">
+                        <property name="text">
+                         <string>excel erstellen</string>
+                        </property>
+                       </widget>
+                      </item>
+                      <item>
                        <widget class="QFrame" name="excel_path">
                         <property name="frameShape">
                          <enum>QFrame::StyledPanel</enum>
@@ -1965,13 +1984,6 @@ p, li { white-space: pre-wrap; }
                           </spacer>
                          </item>
                         </layout>
-                       </widget>
-                      </item>
-                      <item>
-                       <widget class="QPushButton" name="create_excel_pb">
-                        <property name="text">
-                         <string>excel erstellen</string>
-                        </property>
                        </widget>
                       </item>
                       <item>
